--- a/theme/urlcool/index.html
+++ b/theme/urlcool/index.html
@@ -127,7 +127,7 @@
     @media (prefers-color-scheme: dark) {
       body {
         background-color: #121212;
-        color: #e0e0e0;
+        color: #000000;
       }
       .card {
         background-color: #1e1e1e;
