--- a/theme/urlcool/index.html
+++ b/theme/urlcool/index.html
@@ -56,7 +56,7 @@
     .card-title {
       margin-bottom: 20px;
       font-size: 1.2em;
-      color: #555;
+      color: #ce8eff;
     }
 
     .input-group {
