--- a/theme/urlcool/index.html
+++ b/theme/urlcool/index.html
@@ -157,7 +157,7 @@
 </head>
 <body>
   <div class="card">
-    <h5 class="card-header">🎁 Shorten your URLs!</h5>
+    <h5 class="card-header"><img src="https://file2.lykfile.me/theme/urlcool/2024-07-07-LYK-CLOUD.gif" alt="Shorten your URLs!" style="height: 6.5em; margin-right: 10px;"></h5>
     <div class="card-body">
       <h5 class="card-title">Please enter the long URL to be shortened:</h5>
       <div class="input-group mb-3">
